fix: Layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Encode+Sans:400,500,600&display=swap);
+
 body {
   background-color: #0E73B9;
-  font-family: "Encode Sans Semi Condensed";
+  font-family: Encode Sans,sans-serif;
   color: white;
 }
 
@@ -15,16 +17,19 @@ body {
 
 .timeline-container {
   width: 80%;
+  margin-left: -80px;
 }
 
 .result-section {
   border-radius: 15px;
   padding: 20px;
   overflow-y: scroll;
+  overflow-x: scroll;
   height: 40vh;
   padding: 15px;
   background-color: white;
   color: black;
+  max-width: 90vw;
 }
 
 .App-logo {
